Was created pagination from channels list. Improving UI performance is in process.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,98 @@
 <resources>
     <string name="app_name">SceytUiKit</string>
+
+    <string name="login_title">Getting Started</string>
+    <string name="login_subtitle">Just enter your username, click connect button and start</string>
+    <string name="username">Username</string>
+    <string name="connect">connect</string>
+    <string name="connection_failed">Connection failed</string>
+    <string name="channels">Channels</string>
+    <string name="search">search</string>
+    <string name="your_last_message">You: %1$s</string>
+    <string name="edit">Edit</string>
+    <string name="delete">Delete</string>
+    <string name="copy">Copy</string>
+    <string name="leave_channel">Leave Channel</string>
+    <string name="no_channels">No Channels</string>
+    <string name="no_channels_sub_header">You have no created channels yet, create one for sending messages</string>
+    <string name="profile">Profile</string>
+    <string name="no_results_found">No results found</string>
+    <string name="message">Message</string>
+    <string name="online">Online</string>
+    <string name="members_count">%1$d members</string>
+    <string name="done">done</string>
+    <string name="label_create_new_channel">New Channel</string>
+    <string name="_public">Public</string>
+    <string name="_private">Private</string>
+    <string name="direct">direct</string>
+    <string name="hint_uri">URI</string>
+    <string name="hint_channel_subject">Channel Subject</string>
+    <string name="label_create_public_channel">Public Channel</string>
+    <string name="hint_avatar_url">Avatar URL</string>
+    <string name="hint_label">Label</string>
+    <string name="hint_metadata">Metadata</string>
+    <string name="label_create_private_channel">Private Channel</string>
+    <string name="label_create_direct_channel">Direct Channel</string>
+    <string name="hint_members">Members</string>
+    <string name="add_members">Add members</string>
+    <string name="edited">Edited</string>
+    <string name="message_was_deleted">Message was deleted</string>
+    <string name="today">Today</string>
+    <string name="yesterday">Yesterday</string>
+    <string name="channel">Channel</string>
+    <string name="notifications">Notifications</string>
+    <string name="clear_history">Clear history</string>
+    <string name="members">Members</string>
+    <string name="make_admin">Make admin</string>
+    <string name="remove_member">Kick member</string>
+    <string name="block_and_remove_member">Block and kick member</string>
+    <string name="member_name_you">(you)</string>
+    <string name="my_profile">My Profile</string>
+    <string name="sign_out">Sign Out</string>
+    <string name="take_photo">Take photo</string>
+    <string name="upload_from_gallery">Upload from Gallery</string>
+    <string name="file">File</string>
+    <string name="new_channel">New Channel</string>
+    <string name="make_channel_private">Make channel private</string>
+    <string name="make_channel_private_info">By making channel private, only selected members have acess to read or connect to chis channel</string>
+    <string name="label">Label</string>
+    <string name="enter_a_label">Enter a label</string>
+    <string name="uri">URI</string>
+    <string name="enter_channel_uri">Enter channel URI</string>
+    <string name="metadata">Metadata</string>
+    <string name="enter_a_metadata">Enter a metadata</string>
+    <string name="users">Users</string>
+    <string name="need_permissions">Need permissions to chose avatar</string>
+    <string name="uploading_avatar">Uploading avatar</string>
+    <string name="uploaded_avatar">Avatar uploaded</string>
+    <string name="creating_channel">Creating channel</string>
+    <string name="block_and_leave_channel">Block and leave channel</string>
+    <string name="clearing_history">Clearing History</string>
+    <string name="leaving_channel">Leaving From Channel</string>
+    <string name="clear_history_title">Clear history?</string>
+    <string name="clear_history_message">Are you sure you want to delete all messages?</string>
+    <string name="cancel">Cancel</string>
+    <string name="change_role">Change role</string>
+    <string name="editing_message">Editing message</string>
+    <string name="something_went_wrong">Something went wrong</string>
+    <string name="deleting_message">Deleting message</string>
+    <string name="q_delete_message_title">Delete this message?</string>
+    <string name="q_delete_message_body">Are you sure you want to delete this message?</string>
+    <string name="display_name">Display name</string>
+    <string name="enter_display_name">Enter display name</string>
+    <string name="enter_username">Enter username</string>
+    <string name="shared_pref_key">sceyt_shared_prefererences</string>
+    <string name="join">join</string>
+    <string name="waiting_for_network_title">Waiting for network…</string>
+    <string name="connecting_title">Connecting…</string>
+    <string name="set_owner">Set Owner</string>
+    <string name="attachment">Attachment</string>
+    <string name="react">React</string>
+    <string name="add">Add</string>
+    <string name="remove">Remove</string>
+    <string name="replay">Replay</string>
+    <string name="replay_in_thread">Replay in thread</string>
+    <string name="replays">Replays</string>
+    <string name="thread_replay">Thread replay</string>
+    <string name="with">with</string>
 </resources>
