Was created UI and functionality in the SearchInputView.kt, was started creating functionality and UI to show page state ( Loading, Empty, EmptySearchResult).

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,4 +95,6 @@
     <string name="replays">Replays</string>
     <string name="thread_replay">Thread replay</string>
     <string name="with">with</string>
+
+    <string name="sceyt_ui_channel_list_empty">No channels found</string>
 </resources>
