Was arranged directories.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,5 +96,5 @@
     <string name="thread_replay">Thread replay</string>
     <string name="with">with</string>
 
-    <string name="sceyt_ui_channel_list_empty">No channels found</string>
+    <string name="sceyt_ui_channel_list_empty">No results found</string>
 </resources>
