--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,6 +76,7 @@
     <string name="editing_message">Editing message</string>
     <string name="something_went_wrong">Something went wrong</string>
     <string name="deleting_message">Deleting message</string>
+    <string name="delete_message">Delete message</string>
     <string name="q_delete_message_title">Delete this message?</string>
     <string name="q_delete_message_body">Are you sure you want to delete this message?</string>
     <string name="display_name">Display name</string>
@@ -94,8 +95,9 @@
     <string name="replay_in_thread">Replay in thread</string>
     <string name="replays">Replays</string>
     <string name="thread_replay">Thread replay</string>
-    <string name="with">with</string>
+    <string name="with">with %s</string>
 
     <string name="sceyt_ui_channel_list_empty">No results found</string>
+    <string name="sceyt_messages_list_empty">No messages yet</string>
     <string name="no_proper_app_to_open_file">You may not have a proper app for viewing this content</string>
 </resources>
