--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,7 +77,7 @@
     <string name="something_went_wrong">Something went wrong</string>
     <string name="deleting_message">Deleting message</string>
     <string name="delete_message">Delete message</string>
-    <string name="q_delete_message_title">Delete this message?</string>
+    <string name="q_delete_message_title">Delete message?</string>
     <string name="q_delete_message_body">Are you sure you want to delete this message?</string>
     <string name="display_name">Display name</string>
     <string name="enter_display_name">Enter display name</string>
