Was started to creating functionality and UI in the profile page.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,4 +103,5 @@
     <string name="sceyt_mark_as_read">Mark as read</string>
     <string name="sceyt_mark_as_unread">Mark as unread</string>
     <string name="sceyt_block">Block</string>
+    <string name="sceyt_empty_channels_description">You have no created channels yet, create one for sending messages.</string>
 </resources>
