--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,9 +9,7 @@
     <string name="channels">Channels</string>
     <string name="search">Search for channels</string>
     <string name="your_last_message">You: %1$s</string>
-    <string name="delete">Delete</string>
     <string name="copy">Copy</string>
-    <string name="leave_channel">Leave Channel</string>
     <string name="no_channels">No Channels</string>
     <string name="no_channels_sub_header">You have no created channels yet, create one for sending messages</string>
     <string name="profile">Profile</string>
@@ -65,19 +63,14 @@
     <string name="uploading_avatar">Uploading avatar</string>
     <string name="uploaded_avatar">Avatar uploaded</string>
     <string name="creating_channel">Creating channel</string>
-    <string name="block_and_leave_channel">Block and leave channel</string>
     <string name="clearing_history">Clearing History</string>
     <string name="leaving_channel">Leaving From Channel</string>
-    <string name="clear_history_title">Clear history?</string>
-    <string name="clear_history_message">Are you sure you want to delete all messages?</string>
     <string name="cancel">Cancel</string>
     <string name="change_role">Change role</string>
     <string name="editing_message">Editing message</string>
     <string name="something_went_wrong">Something went wrong</string>
     <string name="deleting_message">Deleting message</string>
     <string name="delete_message">Delete message</string>
-    <string name="q_delete_message_title">Delete message?</string>
-    <string name="q_delete_message_body">Are you sure you want to delete this message?</string>
     <string name="display_name">Display name</string>
     <string name="enter_display_name">Enter display name</string>
     <string name="enter_username">Enter username</string>
@@ -98,10 +91,11 @@
 
     <string name="sceyt_ui_channel_list_empty">No results found</string>
     <string name="sceyt_messages_list_empty">No messages yet</string>
-    <string name="no_proper_app_to_open_file">You may not have a proper app for viewing this content</string>
+    <string name="sceyt_no_proper_app_to_open_file">You may not have a proper app for viewing this content</string>
     <string name="sceyt_mark_as_read">Mark as read</string>
     <string name="sceyt_mark_as_unread">Mark as unread</string>
     <string name="sceyt_block">Block</string>
+    <string name="sceyt_block_and_leave_channel">Block and leave channel</string>
     <string name="sceyt_empty_channels_description">You have no created channels yet, create one for sending messages.</string>
     <string name="sceyt_save">Save</string>
     <string name="sceyt_edit">Edit</string>
@@ -109,5 +103,20 @@
     <string name="sceyt_media">Media</string>
     <string name="sceyt_files">Files</string>
     <string name="sceyt_links">Links</string>
+    <string name="sceyt_clear">Clear</string>
+    <string name="sceyt_delete_message_title">Delete message?</string>
+    <string name="sceyt_delete_message_body">Are you sure you want to delete this message?</string>
+    <string name="sceyt_clear_history_title">Clear history?</string>
+    <string name="sceyt_clear_history_desc">Are you sure you want to delete all messages?</string>
+    <string name="sceyt_leave_channel_title">Leave channel?</string>
+    <string name="sceyt_leave_channel_desc">Are you sure you want to leave channel?</string>
+    <string name="sceyt_block_and_leave_channel_title">Block and leave channel?</string>
+    <string name="sceyt_block_and_leave_channel_desc">Are you sure you want to block and leave channel?</string>
+    <string name="sceyt_delete_channel_title">Delete channel?</string>
+    <string name="sceyt_delete_channel_desc">Are you sure you want to delete channel?</string>
+    <string name="sceyt_leave_channel">Leave Channel</string>
+    <string name="sceyt_leave">Leave</string>
+    <string name="sceyt_accept">Accept</string>
+    <string name="sceyt_delete">Delete</string>
 
 </resources>
