Creating functionality ConversationInfoActivity.kt is in progress. Created functionality and UI in the channel members section. Functionality to Sync updates is in process.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,8 +42,8 @@
     <string name="sceyt_members">Members</string>
     <string name="make_admin">Make admin</string>
     <string name="remove_member">Kick member</string>
-    <string name="block_and_remove_member">Block and kick member</string>
-    <string name="member_name_you">(you)</string>
+    <string name="sceyt_block_and_kick_member">Block and kick member</string>
+    <string name="member_name_you">(You)</string>
     <string name="my_profile">My Profile</string>
     <string name="sign_out">Sign Out</string>
     <string name="take_photo">Take photo</string>
@@ -66,7 +66,7 @@
     <string name="clearing_history">Clearing History</string>
     <string name="leaving_channel">Leaving From Channel</string>
     <string name="cancel">Cancel</string>
-    <string name="change_role">Change role</string>
+    <string name="sceyt_change_role">Change role</string>
     <string name="editing_message">Editing message</string>
     <string name="something_went_wrong">Something went wrong</string>
     <string name="deleting_message">Deleting message</string>
@@ -78,7 +78,7 @@
     <string name="join">join</string>
     <string name="waiting_for_network_title">Waiting for network…</string>
     <string name="connecting_title">Connecting…</string>
-    <string name="set_owner">Set Owner</string>
+    <string name="sceyt_set_owner">Set Owner</string>
     <string name="attachment">Attachment</string>
     <string name="react">React</string>
     <string name="add">Add</string>
@@ -118,5 +118,7 @@
     <string name="sceyt_leave">Leave</string>
     <string name="sceyt_accept">Accept</string>
     <string name="sceyt_delete">Delete</string>
+    <string name="sceyt_kick_member">Kick member</string>
+    <string name="sceyt_no_media_items_yet">No media items yet</string>
 
 </resources>
