Creating functionality ConversationInfoActivity.kt is in progress. Was created functionality and UI from edit members(Kick, Block, Change role, Set owner).
Was created functionality to live update changes connected with members in the ChannelMembersFragment.kt (Kicked, Blocked, Changed role, Set owner)..

Was created functionality to show downloading progress in ChannelMediaFragment.kt page and ChannelFilesFragment.kt page.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -120,5 +120,6 @@
     <string name="sceyt_delete">Delete</string>
     <string name="sceyt_kick_member">Kick member</string>
     <string name="sceyt_no_media_items_yet">No media items yet</string>
+    <string name="sceyt_no_file_items_yet">No file items yet</string>
 
 </resources>
