Was created UI and functionality to add members to channel.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,8 @@
     <string name="connect">connect</string>
     <string name="connection_failed">Connection failed</string>
     <string name="channels">Channels</string>
-    <string name="search">Search for channels</string>
+    <string name="search_for_channels">Search for channels</string>
+    <string name="search">Search</string>
     <string name="your_last_message">You: %1$s</string>
     <string name="copy">Copy</string>
     <string name="no_channels">No Channels</string>
