Was created functionality to create Direct channel. Was created UI to create group channel. Creating functionality to create Group channel is in process.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -135,5 +135,6 @@
     <string name="mute_forever">Mute forever</string>
     <string name="mute_notifications">Mute notifications</string>
     <string name="sceyt_typing">typing</string>
+    <string name="new_group">New group</string>
 
 </resources>
