--- a/SceytChatUiKit/src/main/res/values/strings.xml
+++ b/SceytChatUiKit/src/main/res/values/strings.xml
@@ -89,6 +89,7 @@
     <string name="sceyt_last_seen">Last seen</string>
     <string name="sceyt_new_messages">New messages</string>
     <string name="sceyt_gallery">Gallery</string>
-    <string name="unsupported_file_format">This file format is not supported</string>
+    <string name="sceyt_unsupported_file_format">This file format is not supported</string>
+    <string name="sceyt_max_select_count_should_be">Max select count should be lover than</string>
 
 </resources>
