Improved logic to show blurred image. Commented logic to show link preview.

--- a/SceytChatUiKit/src/main/res/values/strings.xml
+++ b/SceytChatUiKit/src/main/res/values/strings.xml
@@ -86,7 +86,7 @@
     <string name="sceyt_yesterday_at">Yesterday at</string>
     <string name="sceyt_at">at</string>
     <string name="sceyt_1_min_ago">1 minute ago</string>
-    <string name="sceyt_last_seen">Last seen</string>
+    <string name="sceyt_last_seen">last seen</string>
     <string name="sceyt_new_messages">New messages</string>
     <string name="sceyt_gallery">Gallery</string>
     <string name="sceyt_this_unsupported_file_format">This file format is not supported</string>
