Created logic to resize files with interface.

--- a/SceytChatUiKit/src/main/res/values/strings.xml
+++ b/SceytChatUiKit/src/main/res/values/strings.xml
@@ -94,6 +94,6 @@
     <string name="sceyt_max_select_count_should_be">Max select count should be lover than</string>
     <string name="sceyt_video">Video</string>
     <string name="sceyt_image">Image</string>
-    <string name="you_blocked_this_user">You blocked this user</string>
+    <string name="sceyt_you_blocked_this_user">You blocked this user</string>
 
 </resources>
