Added logic to show typing in ChannelsListView.kt

--- a/SceytChatUiKit/src/main/res/values/strings.xml
+++ b/SceytChatUiKit/src/main/res/values/strings.xml
@@ -82,6 +82,7 @@
     <string name="sceyt_mute_forever">Mute forever</string>
     <string name="sceyt_mute_notifications">Mute notifications</string>
     <string name="sceyt_typing">typing</string>
+    <string name="sceyt_typing_">typing…</string>
     <string name="sceyt_minutes_ago">minutes ago</string>
     <string name="sceyt_yesterday_at">Yesterday at</string>
     <string name="sceyt_at">at</string>
