Created UI and functionality from Direct chat info page.

--- a/SceytChatUiKit/src/main/res/values/strings.xml
+++ b/SceytChatUiKit/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="sceyt_message">Message</string>
     <string name="sceyt_online">online</string>
     <string name="sceyt_members_count">%1$d members</string>
+    <string name="sceyt_subscribers_count">%1$d subscribers</string>
     <string name="sceyt_hint_channel_subject">Subject</string>
     <string name="sceyt_add_members">Add members</string>
     <string name="sceyt_edited">edited</string>
@@ -52,35 +53,35 @@
     <string name="sceyt_clear">Clear</string>
     <string name="sceyt_delete_message_title">Delete message?</string>
     <string name="sceyt_delete_message_body">Are you sure you want to delete this message?</string>
-    <string name="sceyt_clear_history_title">Clear history?</string>
-    <string name="sceyt_clear_history_desc">Are you sure you want to delete all messages?</string>
+    <string name="sceyt_clear_history_title">Clear history</string>
+    <string name="sceyt_clear_history_desc">Once you clear the history, the messages in this chat will be permanently removed for you.</string>
     <string name="sceyt_leave_channel_title">Leave channel?</string>
     <string name="sceyt_leave_channel_desc">Are you sure you want to leave channel?</string>
     <string name="sceyt_block_and_leave_channel_title">Block and leave channel?</string>
     <string name="sceyt_block_and_leave_channel_desc">Are you sure you want to block and leave channel?</string>
-    <string name="sceyt_block_user_title">Block?</string>
-    <string name="sceyt_block_user_desc">Are you sure you want to block this user?</string>
+    <string name="sceyt_block_user_title">Block user</string>
+    <string name="sceyt_block_user_desc">Blocking a user will prevent them from sending you messages, calls, adding you to groups and channels.</string>
     <string name="sceyt_unblock_user_title">Unblock?</string>
     <string name="sceyt_unblock_user_desc">Are you sure you want to unblock this user?</string>
-    <string name="sceyt_delete_channel_title">Delete channel?</string>
-    <string name="sceyt_delete_channel_desc">Are you sure you want to delete channel?</string>
+    <string name="sceyt_delete_channel_title">Delete chat</string>
+    <string name="sceyt_delete_channel_desc">Once you delete this chat it will be removed from the chat list with its  message history.</string>
     <string name="sceyt_sign_out_title">Sign out?</string>
     <string name="sceyt_sign_out_desc">Are you sure you want to sign out?</string>
     <string name="sceyt_leave_channel">Leave Channel</string>
     <string name="sceyt_leave">Leave</string>
     <string name="sceyt_accept">Accept</string>
     <string name="sceyt_delete">Delete</string>
+    <string name="sceyt_delete_chat">Delete chat</string>
     <string name="sceyt_kick_member">Kick member</string>
     <string name="sceyt_unblock">Unblock</string>
     <string name="sceyt_no_media_items_yet">No media items yet</string>
     <string name="sceyt_no_file_items_yet">No file items yet</string>
     <string name="sceyt_no_link_items_yet">No link items yet</string>
     <string name="sceyt_history_was_successfully_cleared">History was successfully cleared!</string>
-    <string name="sceyt_disable_notifications">Disable notifications</string>
-    <string name="sceyt_mute_for_1_hour">Mute for 1 hour</string>
-    <string name="sceyt_mute_for_2_hours">Mute for 2 hours</string>
-    <string name="sceyt_mute_for_1_day">Mute for 1 day</string>
-    <string name="sceyt_mute_forever">Mute forever</string>
+    <string name="sceyt_mute_chat">Mute chat:</string>
+    <string name="sceyt_mute_for_1_hour">For 1 hour</string>
+    <string name="sceyt_mute_for_8_hours">For 8 hours</string>
+    <string name="sceyt_mute_forever">Forever</string>
     <string name="sceyt_mute_notifications">Mute notifications</string>
     <string name="sceyt_typing">typing</string>
     <string name="sceyt_typing_">typing…</string>
@@ -106,5 +107,8 @@
     <string name="sceyt_audio">audio</string>
     <string name="sceyt_video_small_case">video</string>
     <string name="sceyt_unblock_user">Unblock user</string>
+    <string name="sceyt_admins">Admins</string>
+    <string name="sceyt_channel_description">Channel description</string>
+    <string name="sceyt_about">About</string>
 
 </resources>
