Added logic and UI for ConversationInfoActivity.kt in case Group chat.

--- a/SceytChatUiKit/src/main/res/values/strings.xml
+++ b/SceytChatUiKit/src/main/res/values/strings.xml
@@ -54,24 +54,34 @@
     <string name="sceyt_delete_message_title">Delete message?</string>
     <string name="sceyt_delete_message_body">Are you sure you want to delete this message?</string>
     <string name="sceyt_clear_history_title">Clear history</string>
-    <string name="sceyt_clear_history_desc">Once you clear the history, the messages in this chat will be permanently removed for you.</string>
-    <string name="sceyt_leave_channel_title">Leave channel?</string>
-    <string name="sceyt_leave_channel_desc">Are you sure you want to leave channel?</string>
+    <string name="sceyt_clear_direct_history_desc">Once you clear the history, the messages in this chat will be permanently removed for you.</string>
+    <string name="sceyt_clear_group_history_desc">Once you clear the history it will be permanently removed for you.</string>
+    <string name="sceyt_leave_group_title">Leave group</string>
+    <string name="sceyt_leave_group_desc">Once you leave this group it will be removed for you along with its entire history.</string>
+    <string name="sceyt_leave_channel_title">Leave channel</string>
+    <string name="sceyt_leave_channel_desc">Once you leave this channel it will be removed for you along with its entire history.</string>
     <string name="sceyt_block_and_leave_channel_title">Block and leave channel?</string>
     <string name="sceyt_block_and_leave_channel_desc">Are you sure you want to block and leave channel?</string>
     <string name="sceyt_block_user_title">Block user</string>
     <string name="sceyt_block_user_desc">Blocking a user will prevent them from sending you messages, calls, adding you to groups and channels.</string>
     <string name="sceyt_unblock_user_title">Unblock?</string>
     <string name="sceyt_unblock_user_desc">Are you sure you want to unblock this user?</string>
-    <string name="sceyt_delete_channel_title">Delete chat</string>
-    <string name="sceyt_delete_channel_desc">Once you delete this chat it will be removed from the chat list with its  message history.</string>
+    <string name="sceyt_delete_p2p_title">Delete chat</string>
+    <string name="sceyt_delete_p2p_desc">Once you delete this chat, it will be removed from the chat list with its message history.</string>
+    <string name="sceyt_delete_group_title">Delete group</string>
+    <string name="sceyt_delete_group_desc">Once you delete this group it will be permanently removed along with its entire history for all the group members.</string>
+    <string name="sceyt_delete_channel_title">Delete channel</string>
+    <string name="sceyt_delete_channel_desc">Once you delete this channel it will be permanently removed along with its entire history for all the channel subscribers.</string>
     <string name="sceyt_sign_out_title">Sign out?</string>
     <string name="sceyt_sign_out_desc">Are you sure you want to sign out?</string>
-    <string name="sceyt_leave_channel">Leave Channel</string>
+    <string name="sceyt_leave_channel">Leave channel</string>
     <string name="sceyt_leave">Leave</string>
+    <string name="sceyt_leave_small_case">leave</string>
     <string name="sceyt_accept">Accept</string>
     <string name="sceyt_delete">Delete</string>
     <string name="sceyt_delete_chat">Delete chat</string>
+    <string name="sceyt_delete_group">Delete group</string>
+    <string name="sceyt_delete_channel">Delete channel</string>
     <string name="sceyt_kick_member">Kick member</string>
     <string name="sceyt_unblock">Unblock</string>
     <string name="sceyt_no_media_items_yet">No media items yet</string>
@@ -110,5 +120,7 @@
     <string name="sceyt_admins">Admins</string>
     <string name="sceyt_channel_description">Channel description</string>
     <string name="sceyt_about">About</string>
+    <string name="sceyt_leave_group">Leave group</string>
+    <string name="sceyt_call">call</string>
 
 </resources>
