--- a/SceytChatUiKit/src/main/res/values/strings.xml
+++ b/SceytChatUiKit/src/main/res/values/strings.xml
@@ -123,4 +123,9 @@
     <string name="sceyt_leave_group">Leave group</string>
     <string name="sceyt_call">call</string>
 
+    <string name="sceyt_forward">Forward</string>
+    <string name="sceyt_saved">Saved</string>
+    <string name="sceyt_share">Share</string>
+    <string name="sceyt_media_cannot_save_to_gallery">Cannot save file to gallery. Check permission and allow app to access storage</string>
+
 </resources>
