--- a/SceytChatUiKit/src/main/res/values/strings.xml
+++ b/SceytChatUiKit/src/main/res/values/strings.xml
@@ -63,7 +63,8 @@
     <string name="sceyt_delete_message_body">Are you sure you want to delete this message?</string>
     <string name="sceyt_clear_history_title">Clear history</string>
     <string name="sceyt_clear_direct_history_desc">Once you clear the history, the messages in this chat will be permanently removed for you.</string>
-    <string name="sceyt_clear_group_history_desc">Once you clear the history it will be permanently removed for you.</string>
+    <string name="sceyt_clear_private_chat_history_desc">Once you clear the history it will be permanently removed for you.</string>
+    <string name="sceyt_clear_public_chat_history_desc">Once you clear the history, the messages in this channel will be permanently removed for all the subscribers.</string>
     <string name="sceyt_leave_group_title">Leave group</string>
     <string name="sceyt_leave_group_desc">Once you leave this group it will be removed for you along with its entire history.</string>
     <string name="sceyt_leave_channel_title">Leave channel</string>
