--- a/SceytChatUiKit/src/main/res/values/strings.xml
+++ b/SceytChatUiKit/src/main/res/values/strings.xml
@@ -148,8 +148,8 @@
     <string name="sceyt_deleted_user">Deleted User</string>
     <string name="sceyt_share_with">Share with</string>
     <string name="sceyt_write_a_message">Write a message</string>
-    <string name="sceyt_shara_max_item_count">You can share max 30 item</string>
-    <string name="sceyt_share_max_chats_count">You can share with maximum 5 chats</string>
+    <string name="sceyt_shara_max_item_count">You are allowed to send a maximum of 30 files.</string>
+    <string name="sceyt_share_max_chats_count">You are allowed to send a message to a maximum of 5 chats.</string>
     <string name="sceyt_photo">Photo</string>
 
 </resources>
