--- a/SceytChatUiKit/src/main/res/values/strings.xml
+++ b/SceytChatUiKit/src/main/res/values/strings.xml
@@ -151,5 +151,6 @@
     <string name="sceyt_shara_max_item_count">You are allowed to send a maximum of 30 files.</string>
     <string name="sceyt_share_max_chats_count">You are allowed to send a message to a maximum of 5 chats.</string>
     <string name="sceyt_photo">Photo</string>
+    <string name="slide_to_cancel">"\u003C Slide to cancel"</string>
 
 </resources>
