--- a/SceytChatUiKit/src/main/res/values/strings.xml
+++ b/SceytChatUiKit/src/main/res/values/strings.xml
@@ -110,7 +110,7 @@
     <string name="sceyt_at">at</string>
     <string name="sceyt_1_min_ago">1 minute ago</string>
     <string name="sceyt_last_seen">last seen</string>
-    <string name="sceyt_new_messages">New messages</string>
+    <string name="sceyt_new_messages">New Messages</string>
     <string name="sceyt_gallery">Gallery</string>
     <string name="sceyt_this_unsupported_file_format">This file format is not supported</string>
     <string name="sceyt_unsupported_file_format">file format is not supported</string>
