Creating logic to forward message is in process.

--- a/SceytChatUiKit/src/main/res/values/strings.xml
+++ b/SceytChatUiKit/src/main/res/values/strings.xml
@@ -153,5 +153,7 @@
     <string name="sceyt_photo">Photo</string>
     <string name="slide_to_cancel">"\u003C Slide to cancel"</string>
     <string name="sceyt_message_copied">Message copied</string>
+    <string name="sceyt_forward_message">Forward message</string>
+    <string name="forwarded_message">Forwarded message</string>
 
 </resources>
